<resources>
    <string name="app_name">LuckyWheel Admin</string>

    <!-- drawer strings -->
    <string name="menu_text_font_family">serif-monospace</string>
    <string name="menu_btn_first_txt">المستخدمين</string>
    <string name="menu_btn_second_txt">الفائزين</string>
    <string name="menu_btn_third_txt">المشاركين في اليانصيب</string>
    <string name="menu_btn_fourth_txt">مسابقات</string>
    <string name="menu_btn_fifth_txt">طلبات السحب</string>
    <string name="navigation_drawer_open">Drawer opened</string>
    <string name="navigation_drawer_close">Drawer closed</string>

    <string name="user_name">اسم المستخدم:</string>
    <string name="email">البريد الالكتروني:</string>
    <string name="referral_code">كود الدعوة:</string>
    <string name="balance">الرصيد</string>
    <string name="points">النقاط</string>
    <string name="btn_delete_p_txt">حذف المشارك</string>
    <string name="prize">الجائزة:</string>
    <string name="btn_make_winner_p_txt">تحويل لفائز</string>
    <string name="winner_p_txt"> حاليا فائز</string>
    <string name="btn_make_not_winner_p_txt">تحويل لغير فائز</string>
    <string name="draw_date">تاريخ السحب:</string>
    <string name="btn_delete_contest_txt">حذف المسابقة</string>
    <string name="dialog_delete_contest">هل تريد بالتأكيد حذف هذه المسابقة ؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="dialog_contest_add">إضافة</string>
    <string name="dialog_contest_cancel">إلغاء</string>
    <string name="dialog_add_contest_question">من فضلك أدخل معلومات المسابقة</string>
    <string name="contest_name">اسم المسابقة</string>
    <string name="connection_error">من فضلك تحقق من الاتصال بالانترنت</string>
    <string name="amount">المبلغ:</string>
    <string name="btn_make_request_done">محقق</string>
    <string name="btn_make_request_delayed">تأجيل</string>
    <string name="btn_make_request_delay">مؤجل</string>
    <string name="dialog_request_info_title">معلومات الطلب:</string>
    <string name="request_date">تاريخ الطلب:</string>
    <string name="request_status">حالة الطلب:</string>
    <string name="bank_code">المحفظة:</string>
    <string name="copy_bank_code">نسخ كود المحفظة</string>
    <string name="draw_time">توقيت السحب</string>
    <string name="btn_delete_request">حذف</string>
    <string name="dialog_delete_request">هل تريد بالتأكيد حذف هذا الطلب ؟</string>
    <string name="dialog_delete_participant">هل تريد بالتأكيد حذف هذا المتسابق؟</string>

    <!--drawer strings end -->

</resources>