<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="#3E80B4"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/dialog_add_contest_question"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:weightSum="3">

        <EditText
            android:id="@+id/contest_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:hint="@string/contest_name" />

        <EditText
            android:id="@+id/contest_prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:hint="@string/prize" />

        <EditText
            android:id="@+id/contest_draw_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:hint="@string/draw_date"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#3E80B4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:text="@string/dialog_contest_add"
                android:textColor="#5DBCD2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:text="@string/dialog_contest_cancel"
                android:textColor="#5DBCD2"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>