<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:background="#3E80B4"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/dialog_request_info_title"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:weightSum="6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />

            <!--text view for displaying last name-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/request_date"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />

            <!--text view for displaying last name-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/request_status"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="6dp"
            android:paddingEnd="5dp"
            android:weightSum="6">

            <TextView
                android:id="@+id/request_info_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/user_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size"
                android:textAlignment="textStart"/>

            <!--text view for displaying last name-->
            <TextView
                android:id="@+id/request_info_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/email"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size"
                android:textAlignment="textStart"/>

            <TextView
                android:id="@+id/request_info_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/amount"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />


            <TextView
                android:id="@+id/request_info_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/request_date"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />

            <!--text view for displaying last name-->
            <TextView
                android:id="@+id/request_info_request_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/request_status"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bank_code"
            android:textColor="@android:color/black"
            android:textSize="@dimen/item_tv_fixed_txt_size" />

        <TextView
            android:id="@+id/request_info_bank_code"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:background="@color/colorAccent"
            android:hint="@string/bank_code"
            android:textColor="@android:color/black"
            android:textSize="@dimen/item_tv_fixed_txt_size"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:fadingEdge="horizontal"
            android:scrollHorizontally="true"

            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#3E80B4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_request_info_cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/dialog_contest_cancel"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_request_info_copy_code"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/copy_bank_code"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>
    </LinearLayout>


</LinearLayout>