<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".HomeActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:textAlignment="center"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:checkableBehavior="single">

        <LinearLayout
            android:id="@+id/linear_nav_btns"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:dividerPadding="0dp"
            android:orientation="vertical"
            android:showDividers="none"
            android:weightSum="5">

            <Button
                android:id="@+id/menu_btn_First"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="serif-monospace"
                android:onClick="goToFirstFragment"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="14dp"
                android:text="@string/menu_btn_first_txt"
                android:textColor="@android:color/white"
                android:textSize="@dimen/menu_text_size"
                android:background="@drawable/bg_menu_btn"
                android:layout_weight="1"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/menu_btn_second"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@string/menu_text_font_family"
                android:onClick="goToSecondFragment"
                android:text="@string/menu_btn_second_txt"
                android:textColor="@android:color/white"
                android:textSize="@dimen/menu_text_size"
                android:background="@drawable/bg_menu_btn"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="14dp"
                />

            <Button
                android:id="@+id/menu_btn_third"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_menu_btn"
                android:fontFamily="@string/menu_text_font_family"
                android:onClick="goToThirdFragment"
                android:text="@string/menu_btn_third_txt"
                android:textColor="@android:color/white"
                android:textSize="@dimen/menu_second_text_size"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="14dp"
                />
            <Button
                android:id="@+id/menu_btn_fourth"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_menu_btn"                    android:layout_weight="1"
                android:fontFamily="@string/menu_text_font_family"
                android:onClick="goToFourthFragment"
                android:text="@string/menu_btn_fourth_txt"
                android:textColor="@android:color/white"
                android:textSize="@dimen/menu_text_size"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="14dp"
                />

            <Button
                android:id="@+id/menu_btn_fifth"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_menu_btn"                    android:layout_weight="1"
                android:fontFamily="@string/menu_text_font_family"
                android:onClick="goToFifthFragment"
                android:text="@string/menu_btn_fifth_txt"
                android:textColor="@android:color/white"
                android:textSize="@dimen/menu_text_size"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="14dp"
                />

        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>