<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="6dp"
    android:elevation="8dp"
    android:layoutDirection="rtl"
    app:cardCornerRadius="8dp"

    >

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">


        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />

            <!--text view for displaying last name-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />

            <!--text view for displaying user email-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/referral_code"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/linear1"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User Name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/item_tv_txt_size" />

            <!--text view for displaying last name-->
            <TextView
                android:id="@+id/tv_item_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Prize"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/item_tv_txt_size" />

            <!--text view for displaying user email-->
            <TextView
                android:id="@+id/tv_item_referral_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Code"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_tv_txt_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:orientation="horizontal"
            android:weightSum="4"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/balance"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tv_item_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="Balance"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/item_tv_txt_size"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/points"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tv_item_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_marginEnd="6dp"
                android:text="points"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/item_tv_txt_size"
                android:gravity="center"
                />

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>